refactor | update goal box style and refactor

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>Book Worm • Douban</title>
     <link rel="stylesheet" href="css/app.css">
   </head>
-  <body>
-    <section id="wormapp"></section>
+  <body id="wormapp">
     <script src="js/bundle.js"></script>
   </body>
 </html>
